src/test/deca/codegen/invalid/created/MissingReturn.deca
// Description:
//  Methode int sans return
// Resultats:
//  Error: Missing return statement

class A{
    int a(){
    }
}

{
    A newA = new A();
    newA.a();
}